--- a/frontend-landing/index.html
+++ b/frontend-landing/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
-  </head>
+    <title>Finvesto</title>
+    
+    <link rel="icon" type="image/png" href="/icon.png" />
+    
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
